Update tsconfig.json to use Node.js 16 module resolution and target ES2022

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,15 @@
         "strict": true,
         "noImplicitAny": true,
         "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
         "strictNullChecks": true,
         "target": "ES2022",
-        "moduleResolution": "Node10",
-        "module": "CommonJS",
+        "moduleResolution": "Node16",
+        "module": "Node16",
         "declaration": true,
         "isolatedModules": true,
-        "noEmit": true,
-        "outDir": "dist"
+        "outDir": "dist",
+        "forceConsistentCasingInFileNames": true,
     },
     "include": ["src"],
     "exclude": ["node_modules"]
